# JarvisMini

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_litellm.py  test_run.py  test_runner.py
docker/: Dockerfile  docker-compose.yaml  init-schemas.sql
src/: main.py  scheduler.py
src/agent/: __init__.py  calendar_hitl.py  callbacks.py  general_agent.py  hitl.py  lunch_hitl.py  lunch_restaurant.py  nodes.py  pet_agent.py  router.py  tools.py
src/agent/subagents/: __init__.py  bus_agent.py  cafe_agent.py  calendar_agent.py  coding_mentor.py  general_agent.py  lunch_agent.py  navigation_agent.py  wellness_coach.py
src/agent/tools/: __init__.py  _context.py  ask.py  bus.py  cafe.py  calendar.py  diagnostics.py  lunch.py  navigation.py
src/db/: models.py  session.py
src/mcp_servers/: __init__.py  tavily_server.py
src/schema/: api.py  chat.py  state.py  workflow.py
src/tests/: test_hitl_nodes.py  test_map_api_helpers.py  test_router_hitl.py  test_slack.py
src/tools/: bus_api.py  calendar_api.py  calendar_oauth.py  crawler.py  kakao_map_links.py  lunch_roulette.py  map_api.py  monitor_pipeline.py  notifier.py  pet.py  slack_listener.py  system_monitor.py
src/ui/: web.py
src/ui/templates/: widget.html
src/workflow/: agent.py  chat_flow.py  context.py  helpers.py
src/workflow/nodes/: __init__.py  dashboard.py  end.py  init.py  pet_care.py  router.py  system_monitor.py
