[project]
name = "bookchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0a2,<3",
    "nest-asyncio>=1.6.0",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.41.0",
    "sqlalchemy>=2.0.49",
]
